typescript/checker/tests/conformance/parser/ecmascript5/ErrorRecovery/AccessibilityAfterStatic/parserAccessibilityAfterStatic1.ts.stderr
error: Unexpected token Some(Word(intI))
 --> $DIR/tests/conformance/parser/ecmascript5/ErrorRecovery/AccessibilityAfterStatic/parserAccessibilityAfterStatic1.ts:3:15
  |
3 | static public intI: number;
  |               ^^^^

